log
Fri, Apr 18, 2025  4:39:12 PM: 
 hashmap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:56:34: error: return makes pointer from integer without a cast [-Werror=int-conversion]
     if(nuevoMapa == NULL) return EXIT_FAILURE;
                                  ^~~~~~~~~~~~
hashmap.c:61:16: error: return makes pointer from integer without a cast [-Werror=int-conversion]
         return EXIT_FAILURE;
                ^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
eeef3b7
Fri, Apr 18, 2025  4:39:45 PM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:56:34: error: return makes pointer from integer without a cast [-Werror=int-conversion]
     if(nuevoMapa == NULL) return EXIT_FAILURE;
                                  ^~~~~~~~~~~~
hashmap.c:61:16: error: return makes pointer from integer without a cast [-Werror=int-conversion]
         return EXIT_FAILURE;
                ^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
30727f6
Fri, Apr 18, 2025  4:39:55 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
6b4a56c
Fri, Apr 18, 2025  4:55:57 PM: 
 hashmap.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
 tests:  0|0
cd54aed
Fri, Apr 18, 2025  5:01:10 PM: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  4|5
total_score: 20/70
e42e49d
Fri, Apr 18, 2025  5:06:05 PM: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:49:9: error: 'camio' undeclared (first use in this function)
         camio = 1;
         ^~~~~
hashmap.c:49:9: note: each undeclared identifier is reported only once for each function it appears in
f4d4ad9
Fri, Apr 18, 2025  5:06:31 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
773750e
Fri, Apr 18, 2025  5:21:04 PM: 
 hashmap.c | 15 ++++++++-------
 1 file changed, 8 insertions(+), 7 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:45:38: error: null argument where non-null required (argument 2) [-Werror=nonnull]
     if (map->buckets[pos] == NULL || strcmp(map->buckets[pos]->key, NULL) == 0){
                                      ^~~~~~
hashmap.c:53:44: error: null argument where non-null required (argument 2) [-Werror=nonnull]
             if (map->buckets[i] == NULL || strcmp(map->buckets[i]->key, NULL) == 0){
                                            ^~~~~~
hashmap.c:62:40: error: null argument where non-null required (argument 2) [-Werror=nonnull]
         if (map->buckets[i] == NULL || strcmp(map->buckets[i]->key, NULL) == 0){
                                        ^~~~~~
hashmap.c:44:9: error: unused variable 'cambio' [-Werror=unused-variable]
     int cambio = 0;
         ^~~~~~
hashmap.c: In function 'searchMap':
hashmap.c:104:10: error: unused variable 'pos' [-Werror=unused-variable]
     long pos = hash(key, map->capacity);
          ^~~
cc1.exe: all warnings being treated as errors
ef96865
Fri, Apr 18, 2025  5:22:50 PM: 
 hashmap.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  5|4
total_score: 30/70
06b6cfc
